fix(security): blindaje de JWT y eliminación de tokens en parámetros de URL